--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 		<div class="gantt-target"></div>
 
 		<!-- MESSAGE -->
-		<div class="rounded-md bg-yellow-50 p-4 mt-6 mb-6">
+		<div class="rounded-md bg-amber-50 p-4 mt-6 mb-6">
 			<div class="flex">
 				<div class="flex-shrink-0">
 					<!-- Heroicon name: mini/exclamation-triangle -->
@@ -370,7 +370,7 @@
 					<h3 class="text-sm font-medium text-yellow-800">Attention</h3>
 					<div class="mt-2 text-sm text-yellow-700">
 						<p>Your changes will not be saved!</p>
-						<p class="pt-1">Changes in the configuration will lead to a reload of the dummy data.</p>
+						<p class="pt-1">Changes in the configuration will reload the dummy data.</p>
 					</div>
 				</div>
 			</div>
