--- a/index.html
+++ b/index.html
@@ -72,10 +72,18 @@
 		]
 
 		var colorful = [
-			{
+		{
+				start: '2022-12-30',
+				end: '2023-01-01',
+				name: 'Slate Phase 0',
+				id: "Task 0",
+				progress: 0,
+				custom_class: 'bar-slate'
+			},	
+		  {
 				start: '2023-01-01',
 				end: '2023-01-03',
-				name: 'Phase 1',
+				name: 'Gray Phase 1',
 				id: "Task 0",
 				progress: 10,
 				custom_class: 'bar-gray'
@@ -83,7 +91,7 @@
 			{
 				start: '2023-01-03',
 				end: '2023-01-05',
-				name: 'Phase 2',
+				name: 'Stone Phase 2',
 				id: "Task 1",
 				progress: 20,
 				custom_class: 'bar-stone'
@@ -91,7 +99,7 @@
 			{
 				start: '2023-01-05',
 				end: '2023-01-07',
-				name: 'Phase 3',
+				name: 'Red Phase 3',
 				id: "Task 2",
 				progress: 30,
 				custom_class: 'bar-red'
@@ -99,10 +107,74 @@
 			{
 				start: '2023-01-07',
 				end: '2023-01-09',
-				name: 'Phase 4',
+				name: 'Orange Phase 4',
 				id: "Task 3",
 				progress: 40,
 				custom_class: 'bar-orange'
+			},
+			{
+				start: '2023-01-09',
+				end: '2023-01-11',
+				name: 'Lime Phase 5',
+				id: "Task 4",
+				progress: 50,
+				custom_class: 'bar-lime'
+			},
+			{
+				start: '2023-01-11',
+				end: '2023-01-13',
+				name: 'Green Phase 6',
+				id: "Task 5",
+				progress: 60,
+				custom_class: 'bar-green'
+			},
+			{
+				start: '2023-01-13',
+				end: '2023-01-15',
+				name: 'Sky Phase 7',
+				id: "Task 6",
+				progress: 70,
+				custom_class: 'bar-sky'
+			},
+			{
+				start: '2023-01-15',
+				end: '2023-01-17',
+				name: 'Blue Phase 8',
+				id: "Task 7",
+				progress: 80,
+				custom_class: 'bar-blue'
+			},
+			{
+				start: '2023-01-17',
+				end: '2023-01-19',
+				name: 'Violet Phase 9',
+				id: "Task 8",
+				progress: 90,
+				custom_class: 'bar-violet'
+			},
+			{
+				start: '2023-01-19',
+				end: '2023-01-21',
+				name: 'Fuchsia Phase 10',
+				id: "Task 9",
+				progress: 100,
+				custom_class: 'bar-fuchsia'
+			},
+			{
+				start: '2023-01-21',
+				end: '2023-01-23',
+				name: 'Pink Phase 11',
+				id: "Task 10",
+				progress: 10,
+				custom_class: 'bar-pink'
+			},
+			{
+				start: '2023-01-23',
+				end: '2023-01-25',
+				name: 'Rose Phase 12',
+				id: "Task 11",
+				progress: 20,
+				custom_class: 'bar-rose'
 			},
 		]
 	</script>
@@ -134,6 +206,9 @@
 		/* tailwindcss colors */
 		/* https://tailwindcss.com/docs/customizing-colors */
 
+		.gantt .bar-slate .bar {
+			fill: #475569; /* slate-600 */
+		}
 		.gantt .bar-gray .bar {
 			fill: #4b5563; /* gray-600 */
 		}
@@ -160,6 +235,9 @@
 		}
 		.gantt .bar-violet .bar {
 			fill: #7c3aed; /* violet-600 */
+		}
+		.gantt .bar-fuchsia .bar {
+			fill: #c026d3; /* fuchsia-600 */
 		}
 		.gantt .bar-pink .bar {
 			fill: #db2777; /* pink-600 */
@@ -429,7 +507,7 @@
 		</div>
 
 		<!-- DROPDOWN for loading different datasets -->
-		<div class="w-52">
+		<div class="w-52 mb-6">
 			<label for="location" class="block text-sm font-medium text-gray-700">Load different datasets:</label>
 			<select id="dropdown_data_loader" name="location" class="mt-1 block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-gray-500 focus:outline-none focus:ring-gray-500 sm:text-sm" onchange="dropdown_data_loader(this)">
 				<option>Website Creation</option>
