fix dates website creation project

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<script>
 		var website_creation = [
 			{
-				start: '2023-01-01',
-				end: '2023-01-08',
+				start: '2023-01-02',
+				end: '2023-01-11',
 				name: 'Redesign Website',
 				id: "Task 0",
 				progress: 20,
@@ -38,20 +38,19 @@
 				id: "Task 3",
 				progress: 20,
 				dependencies: 'Task 2',
-				custom_class: 'bar-green'
+				custom_class: 'bar-sky'
 			},
 			{
-				start: '2023-01-09',
-				end: '2023-01-13',
+				start: '2023-01-12',
+				end: '2023-01-14',
 				name: 'Deploy Changes',
 				id: "Task 4",
 				progress: 30,
-				dependencies: 'Task 2',
 				custom_class: 'bar-lime'
 			},
 			{
-				start: '2023-01-14',
-				end: '2023-01-15',
+				start: '2023-01-15',
+				end: '2023-01-16',
 				name: 'Go Live!',
 				id: "Task 5",
 				progress: 10,
